<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/teamAscore1"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:background="#F9A825"
        android:text="@string/buttton1"
        android:onClick="buta1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/teamAscore2"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/teamAscore2"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:background="#F9A825"
        android:text="@string/button2"
        android:textSize="18sp"
        android:onClick="buta2"
        app:layout_constraintBottom_toTopOf="@+id/teamAscore3"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/teamAscore3"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="150dp"
        android:backgroundTint="#F9A825"
        android:text="@string/button3"
        android:textColor="#0E0E0E"
        android:textSize="18sp"
        android:onClick="buta3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="#2E7D32"
        android:text="@string/texta1"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/teamAscore"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/teamAscore"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="24dp"
        android:text="@string/texta2"
        android:textAlignment="center"
        android:textSize="72sp"
        app:layout_constraintBottom_toTopOf="@+id/teamAscore1"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:background="#F9A825"
        android:text="@string/button"
        android:textSize="24sp"
        android:onClick="reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginEnd="200dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="197dp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="#2E7D32"
        android:text="@string/textb1"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/teamBscore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/teamBscore"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="24dp"
        android:text="@string/textb2"
        android:textAlignment="center"
        android:textSize="72sp"
        app:layout_constraintBottom_toTopOf="@+id/teamBscore1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <Button
        android:id="@+id/teamBscore1"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:background="#F9A825"
        android:text="@string/buttton1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/teamBscore2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <Button
        android:id="@+id/teamBscore2"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:background="#F9A825"
        android:text="@string/button2"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/teamBscore3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <Button
        android:id="@+id/teamBscore3"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="150dp"
        android:background="#F9A825"
        android:text="@string/button3"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="@+id/guideline" />
</android.support.constraint.ConstraintLayout>